      properly.

    - Added installcheck and distcheck make targets.

    - Clarified cache size limit options' semantics.

    - Improved display of cache max size values.

    - For debugging purposes, the variable `CCACHE_VERBOSE` may now be set to
      make ccache print executed commands to standard output.

    - The following options are no longer hashed in the preprocessor mode:
      `-imacros`, `-iprefix`, `-iwithprefix`, `-iwithprefixbefore`,
      `-nostdinc`, `-nostdinc++` and `-U`.


Bug fixes
~~~~~~~~~

    - Fixed build on FreeBSD.

    - Improved detection of home directory.

    - User-defined `CPPFLAGS` and `LDFLAGS` are now respected in the Makefile.

    - Fixed NFS issues.

    - Computation of the hash sum has been improved to decrease the risk of
      hash collisions. For instance, the compiler options `-X -Y` and `-X-Y`
      previously contributed equally to the hash sum.

    - Bail out on too hard compiler options `--coverage`, `-fprofile-arcs`,
      `-fprofile-generate`, `-fprofile-use`, `-ftest-coverage` and
      `-save-temps`. Also bail out on `@file` style options.

    - `-MD`/`-MMD` options without `-MT`/`-MF` are now handled correctly.

    - The `-finput-charset` option is now handled correctly.

    - Added support for `-Wp,-MD` and `-Wp,-MMD` options.

    - Debug information containing line numbers of predefined and command-line
      macros (enabled with the compiler option `-g3`) will now be correct.

    - Corrected LRU cleanup handling of object files.

    - `utimes()` is now used instead of `utime()` when available.

    - Non-writable cache directories are now handled gracefully.

    - Corrected documentation about sharing the cache directory.

    - Fixed compilation warnings from GCC 4.3.

    - The command specified by `CCACHE_PREFIX` is no longer part of the hash.

    - Fixed bad memory access spotted by Valgrind.

    - Fixed a bug in `x_realloc`.
